rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax10/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		abstract static void m() { 
			
		} 
	}
}